# Polls

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  README.md  local.yml  manage.py  production.yml  pyproject.toml  setup.cfg  urls.py
.envs/.local/: .postgres
compose/production/traefik/: traefik.yml
config/: api_router.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
polls/: conftest.py  views.py
polls/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
polls/questions/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
polls/questions/api/: serializers.py  tests.py  views.py
polls/questions/migrations/: 0001_initial.py  0002_alter_question_pub_date.py  0003_alter_question_options.py  0004_alter_choice_question.py
polls/templates/: base.html
polls/users/: admin.py  apps.py  models.py  urls.py  views.py
polls/users/tests/: test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_models.py  test_urls.py  test_views.py
polls/utils/: exception_handlers.py  exceptions.py  views.py
requirements/: base.txt  local.txt  production.txt
