[tool.poetry]
name = "polls"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytz = "^2023.2"
python-slugify = "^8.0.1"
pillow = "^9.4.0"
argon2-cffi = "^21.3.0"
whitenoise = "^6.4.0"
redis = "^4.5.3"
hiredis = "^2.2.2"
django = "^4.1.7"
django-environ = "^0.10.0"
django-model-utils = "^4.3.1"
django-allauth = "^0.53.1"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
django-redis = "^5.2.0"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.14.0"
drf-spectacular = "^0.26.1"
gunicorn = {version = "^20.1.0", extras = ["production"]}
psycopg2 = {version = "^2.9.5", extras = ["production"]}
sentry-sdk = {version = "^1.18.0", extras = ["production"]}
django-anymail = {extras = ["production"], version = "^9.1"}


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.1.0"}
werkzeug = {extras = ["watchdog"], version = "^2.2.3"}
ipdb = "^0.13.13"
psycopg2 = "^2.9.5"
mypy = "^1.1.1"
django-stubs = "^1.16.0"
pytest = "^7.2.2"
pytest-sugar = "^0.9.6"
djangorestframework-stubs = "^1.10.0"
sphinx = "^6.1.3"
sphinx-autobuild = "^2021.3.14"
flake8 = "^6.0.0"
flake8-isort = "^6.0.0"
coverage = "^7.2.2"
pylint-django = "^2.5.3"
factory-boy = "^3.2.1"
django-debug-toolbar = "^3.8.1"
django-extensions = "^3.2.1"
django-coverage-plugin = "^3.0.0"
pytest-django = "^4.5.2"
pre-commit = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
